# pdebug

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.conductor/: settings.yaml
docs/: index.md
pdebug/: __init__.py  data_types.py
pdebug/algo/dejitter/: __init__.py  evaluate.py  smooth.py
pdebug/algo/sot/: tracker.py
pdebug/algo/tests/: test_dejitter.py  test_sot_tracker.py
pdebug/debug/: __init__.py  aimet.py  deeppose.py  depth.py  dp.py  dp3.py  heatmap.py  human_seg.py  nerf.py  rgbd_semseg.py  sam6d.py  utils.py  wonder3d.py  yolopose.py
pdebug/debug/tests/: test_nerf.py
pdebug/geometry/: __init__.py  boxes.py  core.py  intervals.py  line.py  matrix.py  mesh.py  plane.py  point.py  point2d.py  point3d.py  points.py  vector.py  vector2d.py  vector3d.py
pdebug/geometry/tests/: test_practical_geometry.py
pdebug/otn/: __init__.py  cli.py  dag.py  manager.py  run_shell.py  single_node.py
pdebug/otn/analysis/: dino_utils.py  kps_eval.py  qnn.py  semseg_eval.py  statistic.py  visualize.py
pdebug/otn/data/: concat_imgdir.py  cvat_utils.py  icp_node.py  imgdir_to_video.py  label_studio_utils.py  linemod.py  make_parquet_old.py  mask2rgba.py  parse_waicai_folder.py  prepare_for_anno.py  roidb_utils.py  semseg_hardmining.py  spatialmp4_node.py  speech_utils.py  undistort_images.py
pdebug/otn/infer/: __init__.py  co-tracker.py  colmap_node.py  depth_anything.py  foundpose.py  genpose2.py  groundingdino_node.py  hunyuan3d_paint.py  hunyuan3d_rembg.py  hunyuan3d_shape.py  icp_track.py  image2normal.py  internimage_semseg.py  io_adapters.py  lance_utils.py  langsam.py  ml_depth_pro_node.py  moondream_node.py  oneposeviagen_3dgen.py  oneposeviagen_pose.py  oneposeviagen_scale.py  orient_anything.py  qwen2_5_vl.py  sam2_node.py  sam6d.py  segment_anything_node.py  spatracker.py  trajectory_analysis_node.py  vggt_node.py
pdebug/otn/inference/: __init__.py  backends.py  diagnostics.py  (+3 more)
pdebug/pdag/: README.md  __init__.py  runner.py  utils.py
pdebug/piata/: __init__.py  cli.py  image_io.py  image_utils.py  input.py  output.py  registry.py  tracklets.py  type_cast.py
pdebug/runnb/: __init__.py  cached_property.py  runnb.py  utils.py
pdebug/templates/: __init__.py  cog_template.yaml  simple.html.jinja  simple_vr.html.jinja
pdebug/tests/: test_data_types.py  test_packaging.py
pdebug/types/: __init__.py  checkpoint.py  null_op.py
pdebug/utils/: audio_utils.py  bpy.py  cache.py  checkpoint.py  ddd.py  decorator.py  dora_utils.py  env.py  fileio.py  gpu_memory.py  gradio_utils.py  hdfs_utils.py  install_x.py  memory_profile.py  null_op.py  pcd_utils.py  pdb.py  pytorch_profiler.py  qualcomm_utils.py  semantic_types.py  three_utils.py  timer.py  torch_utils.py  types.py  video_utils.py  visdom_utils.py  waicai_utils.py  web_engine.py
pdebug/visp/: __init__.py  colormap.py  draw.py  draw_trajectory.py  geomentry.py  plotly.py  rerun.py  robot.py  visdom.py  vispy.py
requirements/: build.txt
scripts/: README.md  aipack-helper.py  ckptloader.py  cocoGt_to_cocoDt.py  cocoGt_to_roidb.py  collect_imgs.py  colmap_to_mvs.sh  colmap_to_nerf.py  colmap_to_open3d.py  compare_bin.py  create_merlin_gpu.py  crop_image.py  edit_camera.py  export_pte.py  fake_gpu_utility.py  imgdir-concat  imgdir-resize  imgdir2gif  imgdir2rec  imgdir2video.py  imgdir_to_colmap.py  imgdir_to_roidb.py  jigsaw.py  jsonloader  jsonloader3  limit_imgsize.py  llama-helper  make-video-music  merge_imgdirs.py  nerf_capture_image.py  nerf_open3d.py  o3d_render.py  odo_state_from_lance.py  oneeuro  onnxdebug  onnxversion  otn-cli  pcd_annotation.html  piata-cli  roidb-helper  (+18 more)
(+113 files in other folders)
